modified:   index.html

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post.html">category</a>
               <div class="image4"></div>
               <div class="post-card__details">
-                <h2><a href="post4.html">BAGUIO CITY </a></h2>
-                <p></p><a class="post-card__avatar" href="post4.html">
+                <h2><a href="post4.html">Baguio City </a></h2>
+                <p>Summer Capital of the Philippines </p><a class="post-card__avatar" href="post4.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -97,8 +97,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">category</a>
               <div class="image5"></div>
               <div class="post-card__details">
-                <h2><a href="post5.html">TAYO NA SA ANTIPOLO </a></h2>
-                <p> </p><a class="post-card__avatar" href="post5.html">
+                <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
+                <p>Pilgrimage Capital of the Philippines </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -110,8 +110,8 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post6.html">category</a>
               <div class="image6"></div>
               <div class="post-card__details">
-                <h2><a href="post6.html">ILOILO </a></h2>
-                <p></p><a class="post-card__avatar" href="post6.html">
+                <h2><a href="post6.html">Province of Iloilo </a></h2>
+                <p>Heart of the Philippines </p><a class="post-card__avatar" href="post6.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -139,8 +139,8 @@
           <h3 class="text-center">social media</h3>
           <ul>
             <li><a href="#"><i class="fa fa-instagram"></i>@goPilipinas</a></li>
-            <li><a href="#"><i class="fa fa-facebook-square"></i>@officialgoPilipinas.ph</a></li>
-            <li><a href="#"><i class="fa fa-envelope"></i>help@goPilipinas.ph</a></li>
+            <li><a href="https://facebook.com/gopilipinasadventurista/"><i class="fa fa-facebook-square"></i>GoPilipinasAdventurista</a></li>
+            <li><a href="#"><i class="fa fa-envelope"></i>gopilipinasadventurista@gmail.com</a></li>
           </ul>
 
       </div>
