--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </a></a></div>
           <label for="menu_icon"> <i class="fa fa-bars"></i></label>
           <input id="menu_icon" type="checkbox">
-          <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> LogIn</a>
+          <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
           </menu>
         </section>
         <h1 id="above-the-fold__description">
@@ -37,7 +37,7 @@
     <section id="latest-review">
       <h2 class="section-title">
         <div class="color-city">latest </div>
-        <div class="color-cape">travel</div>
+        <div class="color-cape">travelBlogs</div>
       </h2>
 
       <div class="container_wrapper">
