modified:   index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="latest-review">
       <h2 class="section-title">
         <div class="color-city">latest </div>
-        <div class="color-cape">travelBlogs</div>
+        <div class="color-cape">travelblogs</div>
       </h2>
 
       <div class="container_wrapper">
@@ -85,7 +85,7 @@
               <div class="image4"></div>
               <div class="post-card__details">
                 <h2><a href="post4.html">Baguio City </a></h2>
-                <p>Summer Capital of the Philippines </p><a class="post-card__avatar" href="post4.html">
+                <p>Explore the Summer Capital of the Philippines, Baguio City! With its cool climate and lush pine forests, Baguio City is a great place to relax and experience the best of nature. Discover the many attractions, from tourist destinations to mossy plants and orchids, that make Baguio City the perfect destination for your next vacation! </p><a class="post-card__avatar" href="post4.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -98,7 +98,7 @@
               <div class="image5"></div>
               <div class="post-card__details">
                 <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
-                <p>Pilgrimage Capital of the Philippines </p><a class="post-card__avatar" href="post5.html">
+                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. It is the largest city in Calabarzon, part of Rizal province. Due to its proximity to Metro Manila, Antipolo City is one of the greatest weekend getaway tourism destinations. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, cafes, hotels, shopping malls, and supermarkets. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
