modified:   index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="image4"></div>
               <div class="post-card__details">
                 <h2><a href="post4.html">Baguio City </a></h2>
-                <p>Explore the Summer Capital of the Philippines, Baguio City! With its cool climate and lush pine forests, Baguio City is a great place to relax and experience the best of nature. Discover the many attractions, from tourist destinations to mossy plants and orchids, that make Baguio City the perfect destination for your next vacation! </p><a class="post-card__avatar" href="post4.html">
+                <p>Explore the Summer Capital of the Philippines, With its cool climate and lush pine forests, Baguio City is a great place to relax and experience the best of nature. Discover the many attractions, from tourist destinations to mossy plants and orchids, that make Baguio City the perfect destination for your next vacation! </p><a class="post-card__avatar" href="post4.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -98,7 +98,7 @@
               <div class="image5"></div>
               <div class="post-card__details">
                 <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
-                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. It is the largest city in Calabarzon, part of Rizal province. Due to its proximity to Metro Manila, Antipolo City is one of the greatest weekend getaway tourism destinations. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, cafes, hotels, shopping malls, and supermarkets. </p><a class="post-card__avatar" href="post5.html">
+                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, caferterias, and supermarkets. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
@@ -111,7 +111,7 @@
               <div class="image6"></div>
               <div class="post-card__details">
                 <h2><a href="post6.html">Province of Iloilo </a></h2>
-                <p>Heart of the Philippines </p><a class="post-card__avatar" href="post6.html">
+                <p>It is known as the "Heart of the Philippines" because of its people's sweet, giving, and loving nature. You'll fall in love with the stunning tourist destinations across Iloilo, which is also known as the "City of Love" and is known for its historic Hispanic structures that is mixed with a sense of the past along with the present."  </p><a class="post-card__avatar" href="post6.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
