modified:   index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </p>
         </div>
         <div id="footer__social_media">
-          <h3 class="text-center">social media</h3>
+          <h3 class="text-center">Follow our Social Media Accounts</h3>
           <ul>
             <li><a href="#"><i class="fa fa-instagram"></i>@goPilipinas</a></li>
             <li><a href="https://facebook.com/gopilipinasadventurista/"><i class="fa fa-facebook-square"></i>GoPilipinasAdventurista</a></li>
