--- a/post4.html
+++ b/post4.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- link tags-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900|Work+Sans:300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
@@ -13,20 +14,18 @@
   </head>
   <body id="post__single-page">
     <div class="container_wrapper">
-      <section class="__colored" id="navigation_container">
+      <section id="navigation_container">
         <div id="branding"><a href="index.html">
-            <h1 class="logo-container __center __colored">
-              <div class="city">city</div>
-              <div class="es">es</div>
-              <div class="cape">cape</div>
-            </h1></a></div>
+          <a class="logo-container __wrap">
+            <a href="index.html"><img src="logo2.png">
+            </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
         <menu><a href="blog.html"> travel</a><a href="blog.html"> photos</a><a href="blog.html"> contributors</a><a href="blog.html"> join us</a><a href="blog.html"> login</a>
         </menu>
       </section>
       <section id="post-featured-image">
-        <div class="post__featured-image1">
+        <div class="post__featured-image4">
           <div class="post__title-container">
             <h2>Lorem ipsum dolor, sit amet, consectetur</h2>
             <p>OCTOBER 11, 2018  — by John Doe  — Views: 100</p>
@@ -128,5 +127,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="script.min.js"></script>
   </body>
 </html>
