deleted:    main1.jpg 	deleted:    main2.jpg 	deleted:    main3.jpg 	modified:   mystyle.css 	modified:   post4.html

--- a/post4.html
+++ b/post4.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
     <!-- title tag-->
-    <title>Hello, world!</title>
+    <title>Hello, Baguio!</title>
   </head>
   <body id="post__single-page">
     <div class="container_wrapper">
@@ -27,13 +27,13 @@
       <section id="post-featured-image">
         <div class="post__featured-image4">
           <div class="post__title-container">
-            <h2>Lorem ipsum dolor, sit amet, consectetur</h2>
-            <p>OCTOBER 11, 2018  — by John Doe  — Views: 100</p>
+            <h2>Who would you not love to visit Baguio?</h2>
+            <p>OCTOBER 11, 2023  — by Jennifer Pajalla-Bravo  — Views: 100</p>
             <div class="post__avatar-container">
               <div class="post__avatar"><a href="#">avatar</a></div>
               <div class="post__avatar-name">
                 <h5>Written by</h5>
-                <p>John Deo</p>
+                <p>Jennifer Pajalla-Bravo</p>
               </div>
             </div>
           </div>
@@ -41,7 +41,7 @@
       </section>
       <section id="post-content">
         <div class="post__content">
-          <p>Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
+          <p> One of the most visited park in the country </p>
           <p><a href="#">Ipsum is simply dummy text </a></p>
           <h2>Why do we use it?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
@@ -58,11 +58,11 @@
         <div class="post__tags">
           <h6>TAGS</h6>
           <ul>
-            <li><a href="#">CEBU,</a></li>
-            <li><a href="#">CITYESACPE,</a></li>
-            <li><a href="#">ELEGANT BEACH RESORT,</a></li>
-            <li><a href="#">NORTH-CEBU,</a></li>
-            <li><a href="#">RESORT,</a></li>
+            <li><a href="#">BAGUIO,</a></li>
+            <li><a href="#">BAGUIOCITYESCAPE,</a></li>
+            <li><a href="#">BURNHAM PARK,</a></li>
+            <li><a href="#">SESSION ROAD,</a></li>
+            <li><a href="#">TAM-AWAN,</a></li>
             <li><a href="#">REVIEW,</a></li>
             <li><a href="#">TRAVEL-REVIEW</a></li>
           </ul>
