modified:   blog.html 	modified:   post.html 	modified:   post4.html

--- a/blog.html
+++ b/blog.html
@@ -15,11 +15,9 @@
     <div class="container_wrapper">
       <section class="__colored" id="navigation_container">
         <div id="branding"><a href="index.html">
-            <h1 class="logo-container __center __colored">
-              <div class="city">city</div>
-              <div class="es">es</div>
-              <div class="cape">cape</div>
-            </h1></a></div>
+          <a class="logo-container __wrap">
+            <a href="index.html"><img src="logo2.png">
+          </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
         <menu><a href="blog.html"> travel</a><a href="blog.html"> photos</a><a href="blog.html"> contributors</a><a href="blog.html"> join us</a><a href="blog.html"> login</a>
@@ -34,7 +32,7 @@
               <div class="avatar__white-bg">
                 <div class="white-bg-container">
                   <div class="avatar__circle"></div>
-                  <div class="avatar__name">by John Doe</div>
+                  <div class="avatar__name">by Jennifer Pajalla-Bravo</div>
                 </div>
               </div></a>
             <p class="featured-details__desc">
@@ -114,11 +112,7 @@
     <footer>
       <div class="container_wrapper">
         <div id="footer__site_description">
-          <h1 class="logo-container __center">
-            <div class="city">city</div>
-            <div class="es">es</div>
-            <div class="cape">cape</div>
-          </h1>
+          <a class="logo-container __center" href="index.html"><img src="logo.png"></a> 
           <h3>explore and be part of the community site</h3>
           <p>
             Would you like to suggest a place you wish to get a review? 
