--- a/post4.html
+++ b/post4.html
@@ -72,7 +72,7 @@
         <div class="author-bio__container">
           <div class="author-bio__avatar"><a href="#">avatar </a></div>
           <div class="author-bio__description">
-            <h2>John Doe</h2>
+            <h2>Jennifer Pajalla-Bravo</h2>
             <p>An aspiring cinematographer and front-end developer. Founder of cityescape.ph. Help me build a community where everyone's experience can make a difference. Join us now.</p>
           </div>
           <div class="author-bio__social-media">
@@ -91,7 +91,7 @@
         <div class="comment__container">
           <div class="comment__avatar"><a href="#">avatar </a></div>
           <div class="comment__description">
-            <h2>John Doe</h2><span>16 APR 2018</span>
+            <h2>Jennifer Pajalla-Bravo</h2><span>16 APR 2018</span>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </div>
           <div class="comment__action"><a href="#">reply</a></div>
