--- a/post.html
+++ b/post.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
     <!-- title tag-->
-    <title>Hello, world!</title>
+    <title>Hello, Baguio!</title>
   </head>
   <body id="post__single-page">
     <div class="container_wrapper">
