modified:   index.html 	modified:   mystyle.css 	modified:   post4.html

--- a/post4.html
+++ b/post4.html
@@ -73,7 +73,7 @@
           <div class="author-bio__avatar"><a href="#">avatar </a></div>
           <div class="author-bio__description">
             <h2>Jennifer Pajalla-Bravo</h2>
-            <p>An aspiring cinematographer and front-end developer. Founder of cityescape.ph. Help me build a community where everyone's experience can make a difference. Join us now.</p>
+            <p>An aspiring chemist and front-end developer. Co-Founder of GoPilipinasAdventurista which build a community where everyone's experience can make a difference. Join us now.</p>
           </div>
           <div class="author-bio__social-media">
             <ul>
