modified:   blog.html 	new file:   images/Iloilo1.png 	new file:   images/antipolo10.jpg 	new file:   images/antipolo11.jpg 	new file:   images/antipolo2.png 	new file:   images/antipolo3.jpg 	new file:   images/antipolo4.jpg 	new file:   images/antipolo5.jpg 	new file:   images/antipolo6.jpg 	new file:   images/antipolo7.jpg 	new file:   images/antipolo8.jpg 	new file:   images/antipolo9.jpg 	new file:   images/avatar.png 	new file:   images/baguio1.jpg 	new file:   images/baguio2.jpg 	new file:   images/baguiolionhead.png 	new file:   images/hinulugang taktak.mp4 	new file:   images/iloilo2.jpg 	new file:   images/iloilo3.jpg 	new file:   images/iloilo4.jpg 	new file:   images/mystical.jpg 	new file:   images/mystical2.jpg 	new file:   images/suman.jpg 	new file:   images/taktak.jpeg 	modified:   index.html 	modified:   mystyle.css 	modified:   post.html 	modified:   post3.html 	modified:   post4.html 	modified:   post5.html 	modified:   post6.html

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     <section id="latest-review">
       <h2 class="section-title">
         <div class="color-city">latest </div>
-        <div class="color-cape">travelblogs</div>
+        <div class="color-es">travel</div>
+        <div class="color-cape">blogs</div>
       </h2>
 
       <div class="container_wrapper">
         <div class="grid_post_container">
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post.html">category</a>
             <div class="image1"></div>
             <div class="post-card__details">
               <h2><a href="post.html">Dahican Beach in Mati, Davao Oriental </a></h2>
@@ -55,7 +56,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post2.html">category</a>
             <div class="image2"></div>
             <div class="post-card__details">
               <h2><a href="post2.html">Famous Mt. Apo National Park </a></h2>
@@ -68,7 +69,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post3.html">category</a>
             <div class="image3"></div>
             <div class="post-card__details">
               <h2><a href="post3.html">Puerto Princesa in Palawan Island </a></h2>
@@ -81,7 +82,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post4.html">category</a>
               <div class="image4"></div>
               <div class="post-card__details">
                 <h2><a href="post4.html">Baguio City </a></h2>
