--- a/post4.html
+++ b/post4.html
@@ -21,16 +21,17 @@
             </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="blog.html"> travel</a><a href="blog.html"> photos</a><a href="blog.html"> contributors</a><a href="blog.html"> join us</a><a href="blog.html"> login</a>
+        <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="post-featured-image">
         <div class="post__featured-image4">
           <div class="post__title-container">
             <h2>Who would you not love to visit Baguio?</h2>
-            <p>OCTOBER 11, 2023  — by Jennifer Pajalla-Bravo  — Views: 100</p>
+            <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
-              <div class="post__avatar"><a href="#">avatar</a></div>
+              <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
+              </div>
               <div class="post__avatar-name">
                 <h5>Written by</h5>
                 <p>Jennifer Pajalla-Bravo</p>
@@ -43,12 +44,12 @@
         <div class="post__content">
           <p> One of the most visited park in the country </p>
           <p><a href="#">Ipsum is simply dummy text </a></p>
-          <h2>Why do we use it?</h2>
+          <h2>Why do we travel here?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
           <div class="post__media_container">
-            <div class="post__media_photo"></div>
+            <div class="post__media_photo4"></div>
             <div class="post__media_caption">
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>Baguio Cathedral</p>
             </div>
           </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
@@ -70,18 +71,18 @@
       </section>
       <section id="post-author-bio">
         <div class="author-bio__container">
-          <div class="author-bio__avatar"><a href="#">avatar </a></div>
+          <div class="author-bio__avatar"><img src="images/jenprofilepic.jpg" height="70" width="70" class="rounded-circle"></div>
           <div class="author-bio__description">
             <h2>Jennifer Pajalla-Bravo</h2>
             <p>An aspiring chemist and front-end developer. Co-Founder of GoPilipinasAdventurista which build a community where everyone's experience can make a difference. Join us now.</p>
           </div>
           <div class="author-bio__social-media">
             <ul>
-              <li><a class="fa fa-facebook" href="#"></a></li>
-              <li><a class="fa fa-instagram" href="#"></a></li>
-              <li><a class="fa fa-envelope" href="#"></a></li>
-              <li><a class="fa fa-youtube" href="#"></a></li>
-              <li><a class="fa fa-link" href="#"></a></li>
+              <li><a class="fa fa-facebook" href="https://facebook.com/jhenchem/"></a></li>
+              <li><a class="fa fa-instagram" href="https://fa-instagram.com/arjhentv"></a></li>
+              <li><a class="fa fa-envelope" href="jhenchem@gmail.com"></a></li>
+              <li><a class="fa fa-youtube" href="https://youtube.com/arjhentv"></a></li>
+              <li><a class="fa fa-link" href="https://arjhentv.kol.eco"></a></li>
             </ul>
           </div>
         </div>
@@ -89,9 +90,9 @@
       <section id="post-comment">
         <h5>THIS POST HAS COMMENTS</h5>
         <div class="comment__container">
-          <div class="comment__avatar"><a href="#">avatar </a></div>
+          <div class="comment__avatar"><img src="images/avatar.png" height="70" width="70" class="rounded-circle"></div>
           <div class="comment__description">
-            <h2>Jennifer Pajalla-Bravo</h2><span>16 APR 2018</span>
+            <h2>Jean Marie B.</h2><span>16 October 2022</span>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </div>
           <div class="comment__action"><a href="#">reply</a></div>
@@ -118,7 +119,7 @@
           </p>
         </div>
         <div id="footer__social_media">
-          <h3>social media</h3>
+          <h3>Follow our Social Media Accounts</h3>
           <ul>
             <li><a href="#"><i class="fa fa-instagram"></i>@goPilipinas</a></li>
             <li><a href="#"><i class="fa fa-facebook-square"></i>@officialgoPilipinas.ph</a></li>
