--- a/post3.html
+++ b/post3.html
@@ -5,36 +5,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- link tags-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900|Work+Sans:300,400,500,600,700,800,900">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="mystyle.css">
     <!-- title tag-->
-    <title>Hello, world!</title>
+    <title>Hello, Baguio!</title>
   </head>
   <body id="post__single-page">
     <div class="container_wrapper">
-      <section class="__colored" id="navigation_container">
+      <section id="navigation_container">
         <div id="branding"><a href="index.html">
-            <h1 class="logo-container __center __colored">
-              <div class="city">city</div>
-              <div class="es">es</div>
-              <div class="cape">cape</div>
-            </h1></a></div>
+          <a class="logo-container __wrap">
+            <a href="index.html"><img src="logo2.png">
+            </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="blog.html"> travel</a><a href="blog.html"> photos</a><a href="blog.html"> contributors</a><a href="blog.html"> join us</a><a href="blog.html"> login</a>
+        <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="post-featured-image">
-        <div class="post__featured-image1">
+        <div class="post__featured-image3">
           <div class="post__title-container">
-            <h2>Lorem ipsum dolor, sit amet, consectetur</h2>
-            <p>OCTOBER 11, 2018  — by John Doe  — Views: 100</p>
+            <h2>Who would you not love to visit Baguio?</h2>
+            <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
-              <div class="post__avatar"><a href="#">avatar</a></div>
+              <div class="post__avatar"><img src="profile.jpg" height="50" width="50" class="rounded-circle">
+              </div>
               <div class="post__avatar-name">
                 <h5>Written by</h5>
-                <p>John Deo</p>
+                <p>Yza Grace Delima</p>
               </div>
             </div>
           </div>
@@ -42,14 +42,14 @@
       </section>
       <section id="post-content">
         <div class="post__content">
-          <p>Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
+          <p> One of the most visited park in the country </p>
           <p><a href="#">Ipsum is simply dummy text </a></p>
-          <h2>Why do we use it?</h2>
+          <h2>Why do we travel here?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
           <div class="post__media_container">
-            <div class="post__media_photo"></div>
+            <div class="post__media_photo3"></div>
             <div class="post__media_caption">
-              <p>There are many variations of passages of Lorem Ipsum available</p>
+              <p>Baguio Cathedral</p>
             </div>
           </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
@@ -59,11 +59,11 @@
         <div class="post__tags">
           <h6>TAGS</h6>
           <ul>
-            <li><a href="#">CEBU,</a></li>
-            <li><a href="#">CITYESACPE,</a></li>
-            <li><a href="#">ELEGANT BEACH RESORT,</a></li>
-            <li><a href="#">NORTH-CEBU,</a></li>
-            <li><a href="#">RESORT,</a></li>
+            <li><a href="#">BAGUIO,</a></li>
+            <li><a href="#">BAGUIOCITYESCAPE,</a></li>
+            <li><a href="#">BURNHAM PARK,</a></li>
+            <li><a href="#">SESSION ROAD,</a></li>
+            <li><a href="#">TAM-AWAN,</a></li>
             <li><a href="#">REVIEW,</a></li>
             <li><a href="#">TRAVEL-REVIEW</a></li>
           </ul>
@@ -71,18 +71,18 @@
       </section>
       <section id="post-author-bio">
         <div class="author-bio__container">
-          <div class="author-bio__avatar"><a href="#">avatar </a></div>
+          <div class="author-bio__avatar"><img src="profile.jpg" height="70" width="70" class="rounded-circle"></div>
           <div class="author-bio__description">
-            <h2>John Doe</h2>
-            <p>An aspiring cinematographer and front-end developer. Founder of cityescape.ph. Help me build a community where everyone's experience can make a difference. Join us now.</p>
+            <h2>Yza Grace Delima</h2>
+            <p>An aspiring chemist and front-end developer. Co-Founder of GoPilipinasAdventurista which build a community where everyone's experience can make a difference. Join us now.</p>
           </div>
           <div class="author-bio__social-media">
             <ul>
-              <li><a class="fa fa-facebook" href="#"></a></li>
-              <li><a class="fa fa-instagram" href="#"></a></li>
-              <li><a class="fa fa-envelope" href="#"></a></li>
-              <li><a class="fa fa-youtube" href="#"></a></li>
-              <li><a class="fa fa-link" href="#"></a></li>
+              <li><a class="fa fa-facebook" href="https://facebook.com/jhenchem/"></a></li>
+              <li><a class="fa fa-instagram" href="https://fa-instagram.com/arjhentv"></a></li>
+              <li><a class="fa fa-envelope" href="jhenchem@gmail.com"></a></li>
+              <li><a class="fa fa-youtube" href="https://youtube.com/arjhentv"></a></li>
+              <li><a class="fa fa-link" href="https://arjhentv.kol.eco"></a></li>
             </ul>
           </div>
         </div>
@@ -90,9 +90,9 @@
       <section id="post-comment">
         <h5>THIS POST HAS COMMENTS</h5>
         <div class="comment__container">
-          <div class="comment__avatar"><a href="#">avatar </a></div>
+          <div class="comment__avatar"><img src="images/avatar.png" height="70" width="70" class="rounded-circle"></div>
           <div class="comment__description">
-            <h2>John Doe</h2><span>16 APR 2018</span>
+            <h2>Jean Marie B.</h2><span>16 October 2022</span>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           </div>
           <div class="comment__action"><a href="#">reply</a></div>
@@ -119,7 +119,7 @@
           </p>
         </div>
         <div id="footer__social_media">
-          <h3>social media</h3>
+          <h3>Follow our Social Media Accounts</h3>
           <ul>
             <li><a href="#"><i class="fa fa-instagram"></i>@goPilipinas</a></li>
             <li><a href="#"><i class="fa fa-facebook-square"></i>@officialgoPilipinas.ph</a></li>
@@ -128,5 +128,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="script.min.js"></script>
   </body>
 </html>
