--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
           </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="blog.html"> travel</a><a href="blog.html"> photos</a><a href="blog.html"> contributors</a><a href="blog.html"> join us</a><a href="blog.html"> login</a>
+        <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="blog-featured">
@@ -144,11 +144,11 @@
         <div id="footer__pages">
           <h3>pages</h3>
           <ul>
-            <li><a href="#">travel</a></li>
-            <li><a href="#">photos</a></li>
-            <li><a href="#">contributors</a></li>
-            <li><a href="#">join us</a></li>
-            <li><a href="#">login</a></li>
+            <li><a href="#">Travel</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Contributors</a></li>
+            <li><a href="#">Join Us</a></li>
+            <li><a href="#">Log In</a></li>
           </ul>
         </div>
       </div>
