modified:   index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="image5"></div>
               <div class="post-card__details">
                 <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
-                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, caferterias, and supermarkets. </p><a class="post-card__avatar" href="post5.html">
+                <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, and cafeterias. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
                   </div>
