modified:   index.html 	modified:   post4.html 	modified:   script.min.js

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <a href="#">View More</a>
         </div>
        </div>
+       <button onclick="myFunction()">Go Back</button>
     </section>
     <footer>
       <div class="container_wrapper">
