--- a/post4.html
+++ b/post4.html
@@ -27,7 +27,7 @@
       <section id="post-featured-image">
         <div class="post__featured-image4">
           <div class="post__title-container">
-            <h2>Who would you not love to visit Baguio?</h2>
+            <h2>Who would not love to visit Baguio?</h2>
             <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
               <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
