modified:   blog.html 	modified:   index.html 	modified:   script.min.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </a></a></div>
           <label for="menu_icon"> <i class="fa fa-bars"></i></label>
           <input id="menu_icon" type="checkbox">
-          <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
+          <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="profile.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
           </menu>
         </section>
         <h1 id="above-the-fold__description">
@@ -125,7 +125,7 @@
           <a href="#">View More</a>
         </div>
        </div>
-       <button onclick="myFunction()">Go Back</button>
+       <input type="button" class="btn btn-outline-success me-2" value="Back" onclick="goBack()">
     </section>
     <footer>
       <div class="container_wrapper">
