modified:   index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <h1 id="above-the-fold__description">
           Explore and be part of our community site
-          meet our contributors who have the same interest as yours
+          Be our contributors who have the same interest as yours and become one
           You'll surely love them!
         </h1>
       </div>
