--- a/post6.html
+++ b/post6.html
@@ -27,7 +27,7 @@
       <section id="post-featured-image">
         <div class="post__featured-image6">
           <div class="post__title-container">
-            <h2>Who would you not love to visit Baguio?</h2>
+            <h2>Who would you not love to visit Iloilo?</h2>
             <p>SEPTEMBER 11, 2022  -— Views: 100</p>
             <div class="post__avatar-container">
               <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
@@ -100,11 +100,11 @@
       </section>
       <section id="comment-form">
         <h5>Leave Comment</h5>
-        <form class="comment-form__container">
-          <input class="comment__name" placeholder="name">
-          <input class="comment__email" placeholder="email">
-          <input class="comment__message" placeholder="message">
-          <button class="comment__action">submit</button>
+        <form class="comment-form__container" action="https://formsubmit.co/gopilipinasadventurista@gmail.com" method="POST">
+          <input type="text" name="Fname" placeholder="Full Name" class="comment__name">
+          <input class="comment__email" type="email" name="Email" placeholder="email">
+          <input class="comment__message" placeholder="message" placeholder="Message" required>
+          <button class="comment__action btn btn-outline-success me-2" type="submit">Submit</button>
         </form>
       </section>
     </div>
