--- a/post4.html
+++ b/post4.html
@@ -21,7 +21,7 @@
             </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
+        <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="blog.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="post-featured-image">
@@ -100,11 +100,11 @@
       </section>
       <section id="comment-form">
         <h5>Leave Comment</h5>
-        <form class="comment-form__container">
-          <input class="comment__name" placeholder="name">
-          <input class="comment__email" placeholder="email">
-          <input class="comment__message" placeholder="message">
-          <button class="comment__action">submit</button>
+        <form class="comment-form__container" action="https://formsubmit.co/gopilipinasadventurista@gmail.com" method="POST">
+          <input type="text" name="Fname" placeholder="Full Name" class="comment__name">
+          <input class="comment__email" type="email" name="Email" placeholder="email">
+          <input class="comment__message" placeholder="message" placeholder="Message" required>
+          <button class="comment__action btn btn-outline-success me-2" type="submit">Submit</button>
         </form>
       </section>
     </div>
