modified:   index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         </section>
         <h1 id="above-the-fold__description">
           Explore and be part of our community site
-          Be our contributors who have the same interest as yours and become one
-          You'll surely love them!
+          Meet our contributor who have the same interest as yours 
+          and become one.
+          You'll surely love them and get a chance to be 
+          featured in this Go Pilipinas-Adveturista TravelBlog!
         </h1>
       </div>
     </section>
