modified:   About.html 	modified:   blog.html 	modified:   index.html

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
           </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="blog.html"> Travel</a><a href="blog.html"> Gallery</a><a href="blog.html"> Contributors</a><a href="blog.html"> Join Us</a><a href="blog.html"> Log In</a>
+        <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="blog.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="blog-featured">
@@ -53,7 +53,7 @@
       </section>
       <section id="blog-list">
         <div class="grid_post_container">
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post.html">SEE BLOG</a>
             <div class="image1"></div>
             <div class="post-card__details">
               <h2><a href="post.html">Dahican Beach in Mati, Davao Oriental </a></h2>
@@ -65,7 +65,7 @@
                 <div class="avatar__muted-line"></div></a>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post2.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post2.html">SEE BLOG</a>
             <div class="image2"></div>
             <div class="post-card__details">
               <h2><a href="post2.html">Famous Mt. Apo National Park </a></h2>
@@ -77,7 +77,7 @@
                 <div class="avatar__muted-line"></div></a>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post3.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post3.html">SEE BLOG</a>
             <div class="image3"></div>
             <div class="post-card__details">
               <h2><a href="post3.html">Puerto Princesa in Palawan Island </a></h2>
@@ -89,7 +89,7 @@
                 <div class="avatar__muted-line"></div></a>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post4.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post4.html">SEE BLOG</a>
             <div class="image4"></div>
             <div class="post-card__details">
               <h2><a href="post4.html">Baguio City </a></h2>
@@ -102,7 +102,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post5.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post5.html">SEE BLOG</a>
             <div class="image5"></div>
             <div class="post-card__details">
               <h2><a href="post5.html">Tayo Na! Sa Antipolo </a></h2>
@@ -115,7 +115,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post6.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox"><a class="post-card__category" href="post6.html">SEE BLOG</a>
             <div class="image6"></div>
             <div class="post-card__details">
               <h2><a href="post6.html">Province of Iloilo </a></h2>
