--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="container_wrapper">
         <div class="grid_post_container">
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post.html">See Full Blog</a>
             <div class="image1"></div>
             <div class="post-card__details">
               <h2><a href="post.html">Dahican Beach in Mati, Davao Oriental </a></h2>
@@ -58,7 +58,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post2.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post2.html">See Full Blog</a>
             <div class="image2"></div>
             <div class="post-card__details">
               <h2><a href="post2.html">Famous Mt. Apo National Park </a></h2>
@@ -71,7 +71,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post3.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post3.html">See Full Blog</a>
             <div class="image3"></div>
             <div class="post-card__details">
               <h2><a href="post3.html">Puerto Princesa in Palawan Island </a></h2>
@@ -84,7 +84,7 @@
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post4.html">category</a>
+          <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post4.html">See Full Blog</a>
               <div class="image4"></div>
               <div class="post-card__details">
                 <h2><a href="post4.html">Baguio City </a></h2>
@@ -97,7 +97,7 @@
               </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">category</a>
+            <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">See Full Blog</a>
               <div class="image5"></div>
               <div class="post-card__details">
                 <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
@@ -110,7 +110,7 @@
               </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post6.html">category</a>
+            <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post6.html">See Full Blog</a>
               <div class="image6"></div>
               <div class="post-card__details">
                 <h2><a href="post6.html">Province of Iloilo </a></h2>
