--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
           </a></a></div>
         <label for="menu_icon"> <i class="fa fa-bars"></i></label>
         <input id="menu_icon" type="checkbox">
-        <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="blog.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
+        <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
         </menu>
       </section>
       <section id="blog-featured">
@@ -182,23 +182,7 @@
             }(document, 'script', 'facebook-jssdk'));
           </script>
 
-          <script>
-         function myFunction() {
-          var dots = document.getElementById("dots");
-          var moreText = document.getElementById("more");
-          var btnText = document.getElementById("myBtn");
-        
-          if (dots.style.display === "none") {
-            dots.style.display = "inline";
-            btnText.innerHTML = "Read more";
-            moreText.style.display = "none";
-          } else {
-            dots.style.display = "none";
-            btnText.innerHTML = "Read less";
-            moreText.style.display = "inline";
-          }
-        }
-        </script>
+         
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.min.js"></script>
