--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </a></a></div>
           <label for="menu_icon"> <i class="fa fa-bars"></i></label>
           <input id="menu_icon" type="checkbox">
-          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="blog.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
+          <menu><a href="https://maps.google.com.ph/"> Travel</a><a href="gallery.html"> Gallery</a><a href="About.html"> About</a><a href="https://jhenchem0210.github.io/ContriMP2/index.html"> Join Us</a><a href="blog.html"> Log In</a>
           </menu>
         </section>
         <h1 id="above-the-fold__description">
