--- a/post4.html
+++ b/post4.html
@@ -25,12 +25,12 @@
         </menu>
       </section>
       <section id="post-featured-image">
-        <div class="post__featured-image1">
+        <div class="post__featured-image4">
           <div class="post__title-container">
             <h2>Who would you not love to visit Baguio?</h2>
             <p>SEPTEMBER 11, 2022  -— <span id="visits"></span>Views: </p>
             <div class="post__avatar-container">
-              <div class="post__avatar"><img src="profile.jpg" height="50" width="50" class="rounded-circle">
+              <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
               </div>
               <div class="post__avatar-name">
                 <h5>Written by</h5>
@@ -71,9 +71,9 @@
           <h2>Why do we travel here?</h2>
           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
           <div class="post__media_container">
-            <div class="post__media_photo1"></div>
+            <div class="post__media_photo4"></div>
             <div class="post__media_caption">
-              <p>Baguio Cathedral</p>
+              <p>Burnham Park</p>
             </div>
           </div>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It </p>
@@ -128,7 +128,7 @@
           <input type="text" name="Fname" placeholder="Full Name" class="comment__name">
           <input class="comment__email" type="email" name="Email" placeholder="email">
           <input type="text" class="comment__message" placeholder="message" placeholder="Message" required>
-          <button class="comment__action btn btn-outline-success me-2" type="submit">Submit</button>
+          <button class="btn btn-outline-success me-2" type="submit">Submit</button>
         </form>
       </section>
     </div>
