modified:   index.html 	modified:   post4.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 post-card moreBox" style="display: none;"><a class="post-card__category" href="post5.html">See Full Blog</a>
               <div class="image5"></div>
               <div class="post-card__details">
-                <h2><a href="post5.html">Tayo Na Sa Antipolo </a></h2>
+                <h2><a href="post5.html">Tayo Na! Sa Antipolo </a></h2>
                 <p>Antipolo is frequently referred to as the "Pilgrimage Capital of the Philippines" due to its extensive religious history and popularity as a destination for pilgrims. You may enjoy many of the tourist attractions it has to offer, including waterfalls, enormous mountains, caves, rivers, resorts, restobars, and cafeterias. </p><a class="post-card__avatar" href="post5.html">
                   <div class>
                     <img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
