--- a/post4.html
+++ b/post4.html
@@ -28,7 +28,7 @@
         <div class="post__featured-image4">
           <div class="post__title-container">
             <h2>Who would you not love to visit Baguio?</h2>
-            <p>SEPTEMBER 11, 2022  -— <span id="visits"></span>Views: </p>
+            <p>SEPTEMBER 11, 2022  -— <span id="visits"></span>Views:100 </p>
             <div class="post__avatar-container">
               <div class="post__avatar"><img src="images/jenprofilepic.jpg" height="50" width="50" class="rounded-circle">
               </div>
@@ -128,7 +128,8 @@
           <input type="text" name="Fname" placeholder="Full Name" class="comment__name">
           <input class="comment__email" type="email" name="Email" placeholder="email">
           <input type="text" class="comment__message" placeholder="message" placeholder="Message" required>
-          <button class="btn btn-outline-success me-2" type="submit">Submit</button>
+          <a href="https://formsubmit.co/el/{custom-link}/?next=https://https://jhenchem0210.github.io/ContriMP2/index.html" target="_blank">
+          <button class="btn btn-outline-success me-2" type="submit">Submit</button></a>
         </form>
       </section>
     </div>
